parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ACENTO_CIRCUNFLEJO
    ACENTO_GRAVE
    ADMIRACION
    AMPERSAND
    APOSTROFE
    ARROBA
    ASTERISCO
    BARRA
    BARRA_INV
    BARRA_VERTICAL
    COMILLAS
    DOMINIO
    EXTENSION
    GUION
    GUION_BAJO
    HTTP
    HTTPS
    IGUAL
    INTEGER
    INTERROGACION
    MAS
    MAYOR
    MENOR
    NUMERAL
    PARENTESIS_DER
    PARENTESIS_IZQ
    PORCENTAJE
    PROTOCOLO
    PUERTO
    PUNTO
    PUNTO_Y_COMA
    RUTA
    URL
    VIRGULILLA

Grammar

Rule 0     S' -> json
Rule 1     json -> LLAVE_IZQ contenido LLAVE_DER
Rule 2     contenido -> campos_principales
Rule 3     campos_principales -> campo_principal
Rule 4     campos_principales -> campo_principal COMA campos_principales
Rule 5     campos_principales -> empty
Rule 6     campo_principal -> VERSION DOS_PUNTOS STRING
Rule 7     campo_principal -> EQUIPOS DOS_PUNTOS CORCHETE_IZQ lista_equipos CORCHETE_DER
Rule 8     campo_principal -> FIRMA_DIGITAL DOS_PUNTOS STRING
Rule 9     campo_principal -> FIRMA_DIGITAL DOS_PUNTOS NULO
Rule 10    lista_equipos -> equipo
Rule 11    lista_equipos -> equipo COMA lista_equipos
Rule 12    lista_equipos -> empty
Rule 13    equipo -> LLAVE_IZQ campos_equipo LLAVE_DER
Rule 14    campos_equipo -> campo_equipo
Rule 15    campos_equipo -> campo_equipo COMA campos_equipo
Rule 16    campos_equipo -> empty
Rule 17    campo_equipo -> NOMBRE_EQUIPO DOS_PUNTOS STRING
Rule 18    campo_equipo -> IDENTIDAD_EQUIPO DOS_PUNTOS STRING
Rule 19    campo_equipo -> LINK DOS_PUNTOS STRING
Rule 20    campo_equipo -> ASIGNATURA DOS_PUNTOS STRING
Rule 21    campo_equipo -> CARRERA DOS_PUNTOS STRING
Rule 22    campo_equipo -> UNIVERSIDAD_REGIONAL DOS_PUNTOS STRING
Rule 23    campo_equipo -> VERSION DOS_PUNTOS STRING
Rule 24    campo_equipo -> ALIANZA_EQUIPO DOS_PUNTOS STRING
Rule 25    campo_equipo -> DIRECCION DOS_PUNTOS direccion
Rule 26    campo_equipo -> INTEGRANTES DOS_PUNTOS CORCHETE_IZQ lista_integrantes CORCHETE_DER
Rule 27    campo_equipo -> PROYECTOS DOS_PUNTOS CORCHETE_IZQ lista_proyectos CORCHETE_DER
Rule 28    campo_equipo -> FIRMA_DIGITAL DOS_PUNTOS STRING
Rule 29    direccion -> LLAVE_IZQ campos_direccion LLAVE_DER
Rule 30    campos_direccion -> campo_direccion
Rule 31    campos_direccion -> campo_direccion COMA campos_direccion
Rule 32    campos_direccion -> empty
Rule 33    campo_direccion -> CALLE DOS_PUNTOS STRING
Rule 34    campo_direccion -> CIUDAD DOS_PUNTOS STRING
Rule 35    campo_direccion -> PAIS DOS_PUNTOS STRING
Rule 36    lista_integrantes -> integrante
Rule 37    lista_integrantes -> integrante COMA lista_integrantes
Rule 38    lista_integrantes -> empty
Rule 39    integrante -> LLAVE_IZQ campos_integrante LLAVE_DER
Rule 40    campos_integrante -> campo_integrante
Rule 41    campos_integrante -> campo_integrante COMA campos_integrante
Rule 42    campos_integrante -> empty
Rule 43    campo_integrante -> NOMBRE DOS_PUNTOS STRING
Rule 44    campo_integrante -> EDAD DOS_PUNTOS NUM
Rule 45    campo_integrante -> CARGO DOS_PUNTOS STRING
Rule 46    campo_integrante -> FOTO DOS_PUNTOS STRING
Rule 47    campo_integrante -> EMAIL DOS_PUNTOS STRING
Rule 48    campo_integrante -> HABILIDADES DOS_PUNTOS STRING
Rule 49    campo_integrante -> SALARIO DOS_PUNTOS salario
Rule 50    campo_integrante -> ACTIVO DOS_PUNTOS BOOLEANO
Rule 51    salario -> FLOAT
Rule 52    salario -> NUM
Rule 53    lista_proyectos -> proyecto
Rule 54    lista_proyectos -> proyecto COMA lista_proyectos
Rule 55    lista_proyectos -> empty
Rule 56    proyecto -> LLAVE_IZQ campos_proyecto LLAVE_DER
Rule 57    campos_proyecto -> campo_proyecto
Rule 58    campos_proyecto -> campo_proyecto COMA campos_proyecto
Rule 59    campos_proyecto -> empty
Rule 60    campo_proyecto -> NOMBRE DOS_PUNTOS STRING
Rule 61    campo_proyecto -> ESTADO DOS_PUNTOS STRING
Rule 62    campo_proyecto -> RESUMEN DOS_PUNTOS STRING
Rule 63    campo_proyecto -> TAREAS DOS_PUNTOS CORCHETE_IZQ lista_tareas CORCHETE_DER
Rule 64    campo_proyecto -> FECHA_INICIO DOS_PUNTOS DATE
Rule 65    campo_proyecto -> FECHA_FIN DOS_PUNTOS DATE
Rule 66    campo_proyecto -> VIDEO DOS_PUNTOS STRING
Rule 67    campo_proyecto -> CONCLUSION DOS_PUNTOS STRING
Rule 68    lista_tareas -> tarea
Rule 69    lista_tareas -> tarea COMA lista_tareas
Rule 70    lista_tareas -> empty
Rule 71    tarea -> LLAVE_IZQ campos_tarea LLAVE_DER
Rule 72    campos_tarea -> campo_tarea
Rule 73    campos_tarea -> campo_tarea COMA campos_tarea
Rule 74    campos_tarea -> empty
Rule 75    campo_tarea -> NOMBRE DOS_PUNTOS STRING
Rule 76    campo_tarea -> ESTADO DOS_PUNTOS STRING
Rule 77    campo_tarea -> RESUMEN DOS_PUNTOS STRING
Rule 78    campo_tarea -> FECHA_INICIO DOS_PUNTOS DATE
Rule 79    campo_tarea -> FECHA_INICIO DOS_PUNTOS NULO
Rule 80    campo_tarea -> FECHA_FIN DOS_PUNTOS DATE
Rule 81    campo_tarea -> FECHA_FIN DOS_PUNTOS NULO
Rule 82    empty -> <empty>

Terminals, with rules where they appear

ACENTO_CIRCUNFLEJO   : 
ACENTO_GRAVE         : 
ACTIVO               : 50
ADMIRACION           : 
ALIANZA_EQUIPO       : 24
AMPERSAND            : 
APOSTROFE            : 
ARROBA               : 
ASIGNATURA           : 20
ASTERISCO            : 
BARRA                : 
BARRA_INV            : 
BARRA_VERTICAL       : 
BOOLEANO             : 50
CALLE                : 33
CARGO                : 45
CARRERA              : 21
CIUDAD               : 34
COMA                 : 4 11 15 31 37 41 54 58 69 73
COMILLAS             : 
CONCLUSION           : 67
CORCHETE_DER         : 7 26 27 63
CORCHETE_IZQ         : 7 26 27 63
DATE                 : 64 65 78 80
DIRECCION            : 25
DOMINIO              : 
DOS_PUNTOS           : 6 7 8 9 17 18 19 20 21 22 23 24 25 26 27 28 33 34 35 43 44 45 46 47 48 49 50 60 61 62 63 64 65 66 67 75 76 77 78 79 80 81
EDAD                 : 44
EMAIL                : 47
EQUIPOS              : 7
ESTADO               : 61 76
EXTENSION            : 
FECHA_FIN            : 65 80 81
FECHA_INICIO         : 64 78 79
FIRMA_DIGITAL        : 8 9 28
FLOAT                : 51
FOTO                 : 46
GUION                : 
GUION_BAJO           : 
HABILIDADES          : 48
HTTP                 : 
HTTPS                : 
IDENTIDAD_EQUIPO     : 18
IGUAL                : 
INTEGER              : 
INTEGRANTES          : 26
INTERROGACION        : 
LINK                 : 19
LLAVE_DER            : 1 13 29 39 56 71
LLAVE_IZQ            : 1 13 29 39 56 71
MAS                  : 
MAYOR                : 
MENOR                : 
NOMBRE               : 43 60 75
NOMBRE_EQUIPO        : 17
NULO                 : 9 79 81
NUM                  : 44 52
NUMERAL              : 
PAIS                 : 35
PARENTESIS_DER       : 
PARENTESIS_IZQ       : 
PORCENTAJE           : 
PROTOCOLO            : 
PROYECTOS            : 27
PUERTO               : 
PUNTO                : 
PUNTO_Y_COMA         : 
RESUMEN              : 62 77
RUTA                 : 
SALARIO              : 49
STRING               : 6 8 17 18 19 20 21 22 23 24 28 33 34 35 43 45 46 47 48 60 61 62 66 67 75 76 77
TAREAS               : 63
UNIVERSIDAD_REGIONAL : 22
URL                  : 
VERSION              : 6 23
VIDEO                : 66
VIRGULILLA           : 
error                : 

Nonterminals, with rules where they appear

campo_direccion      : 30 31
campo_equipo         : 14 15
campo_integrante     : 40 41
campo_principal      : 3 4
campo_proyecto       : 57 58
campo_tarea          : 72 73
campos_direccion     : 29 31
campos_equipo        : 13 15
campos_integrante    : 39 41
campos_principales   : 2 4
campos_proyecto      : 56 58
campos_tarea         : 71 73
contenido            : 1
direccion            : 25
empty                : 5 12 16 32 38 42 55 59 70 74
equipo               : 10 11
integrante           : 36 37
json                 : 0
lista_equipos        : 7 11
lista_integrantes    : 26 37
lista_proyectos      : 27 54
lista_tareas         : 63 69
proyecto             : 53 54
salario              : 49
tarea                : 68 69

Parsing method: LALR

state 0

    (0) S' -> . json
    (1) json -> . LLAVE_IZQ contenido LLAVE_DER

    LLAVE_IZQ       shift and go to state 2

    json                           shift and go to state 1

state 1

    (0) S' -> json .



state 2

    (1) json -> LLAVE_IZQ . contenido LLAVE_DER
    (2) contenido -> . campos_principales
    (3) campos_principales -> . campo_principal
    (4) campos_principales -> . campo_principal COMA campos_principales
    (5) campos_principales -> . empty
    (6) campo_principal -> . VERSION DOS_PUNTOS STRING
    (7) campo_principal -> . EQUIPOS DOS_PUNTOS CORCHETE_IZQ lista_equipos CORCHETE_DER
    (8) campo_principal -> . FIRMA_DIGITAL DOS_PUNTOS STRING
    (9) campo_principal -> . FIRMA_DIGITAL DOS_PUNTOS NULO
    (82) empty -> .

    VERSION         shift and go to state 7
    EQUIPOS         shift and go to state 8
    FIRMA_DIGITAL   shift and go to state 9
    LLAVE_DER       reduce using rule 82 (empty -> .)

    contenido                      shift and go to state 3
    campos_principales             shift and go to state 4
    campo_principal                shift and go to state 5
    empty                          shift and go to state 6

state 3

    (1) json -> LLAVE_IZQ contenido . LLAVE_DER

    LLAVE_DER       shift and go to state 10


state 4

    (2) contenido -> campos_principales .

    LLAVE_DER       reduce using rule 2 (contenido -> campos_principales .)


state 5

    (3) campos_principales -> campo_principal .
    (4) campos_principales -> campo_principal . COMA campos_principales

    LLAVE_DER       reduce using rule 3 (campos_principales -> campo_principal .)
    COMA            shift and go to state 11


state 6

    (5) campos_principales -> empty .

    LLAVE_DER       reduce using rule 5 (campos_principales -> empty .)


state 7

    (6) campo_principal -> VERSION . DOS_PUNTOS STRING

    DOS_PUNTOS      shift and go to state 12


state 8

    (7) campo_principal -> EQUIPOS . DOS_PUNTOS CORCHETE_IZQ lista_equipos CORCHETE_DER

    DOS_PUNTOS      shift and go to state 13


state 9

    (8) campo_principal -> FIRMA_DIGITAL . DOS_PUNTOS STRING
    (9) campo_principal -> FIRMA_DIGITAL . DOS_PUNTOS NULO

    DOS_PUNTOS      shift and go to state 14


state 10

    (1) json -> LLAVE_IZQ contenido LLAVE_DER .

    $end            reduce using rule 1 (json -> LLAVE_IZQ contenido LLAVE_DER .)


state 11

    (4) campos_principales -> campo_principal COMA . campos_principales
    (3) campos_principales -> . campo_principal
    (4) campos_principales -> . campo_principal COMA campos_principales
    (5) campos_principales -> . empty
    (6) campo_principal -> . VERSION DOS_PUNTOS STRING
    (7) campo_principal -> . EQUIPOS DOS_PUNTOS CORCHETE_IZQ lista_equipos CORCHETE_DER
    (8) campo_principal -> . FIRMA_DIGITAL DOS_PUNTOS STRING
    (9) campo_principal -> . FIRMA_DIGITAL DOS_PUNTOS NULO
    (82) empty -> .

    VERSION         shift and go to state 7
    EQUIPOS         shift and go to state 8
    FIRMA_DIGITAL   shift and go to state 9
    LLAVE_DER       reduce using rule 82 (empty -> .)

    campo_principal                shift and go to state 5
    campos_principales             shift and go to state 15
    empty                          shift and go to state 6

state 12

    (6) campo_principal -> VERSION DOS_PUNTOS . STRING

    STRING          shift and go to state 16


state 13

    (7) campo_principal -> EQUIPOS DOS_PUNTOS . CORCHETE_IZQ lista_equipos CORCHETE_DER

    CORCHETE_IZQ    shift and go to state 17


state 14

    (8) campo_principal -> FIRMA_DIGITAL DOS_PUNTOS . STRING
    (9) campo_principal -> FIRMA_DIGITAL DOS_PUNTOS . NULO

    STRING          shift and go to state 18
    NULO            shift and go to state 19


state 15

    (4) campos_principales -> campo_principal COMA campos_principales .

    LLAVE_DER       reduce using rule 4 (campos_principales -> campo_principal COMA campos_principales .)


state 16

    (6) campo_principal -> VERSION DOS_PUNTOS STRING .

    COMA            reduce using rule 6 (campo_principal -> VERSION DOS_PUNTOS STRING .)
    LLAVE_DER       reduce using rule 6 (campo_principal -> VERSION DOS_PUNTOS STRING .)


state 17

    (7) campo_principal -> EQUIPOS DOS_PUNTOS CORCHETE_IZQ . lista_equipos CORCHETE_DER
    (10) lista_equipos -> . equipo
    (11) lista_equipos -> . equipo COMA lista_equipos
    (12) lista_equipos -> . empty
    (13) equipo -> . LLAVE_IZQ campos_equipo LLAVE_DER
    (82) empty -> .

    LLAVE_IZQ       shift and go to state 23
    CORCHETE_DER    reduce using rule 82 (empty -> .)

    lista_equipos                  shift and go to state 20
    equipo                         shift and go to state 21
    empty                          shift and go to state 22

state 18

    (8) campo_principal -> FIRMA_DIGITAL DOS_PUNTOS STRING .

    COMA            reduce using rule 8 (campo_principal -> FIRMA_DIGITAL DOS_PUNTOS STRING .)
    LLAVE_DER       reduce using rule 8 (campo_principal -> FIRMA_DIGITAL DOS_PUNTOS STRING .)


state 19

    (9) campo_principal -> FIRMA_DIGITAL DOS_PUNTOS NULO .

    COMA            reduce using rule 9 (campo_principal -> FIRMA_DIGITAL DOS_PUNTOS NULO .)
    LLAVE_DER       reduce using rule 9 (campo_principal -> FIRMA_DIGITAL DOS_PUNTOS NULO .)


state 20

    (7) campo_principal -> EQUIPOS DOS_PUNTOS CORCHETE_IZQ lista_equipos . CORCHETE_DER

    CORCHETE_DER    shift and go to state 24


state 21

    (10) lista_equipos -> equipo .
    (11) lista_equipos -> equipo . COMA lista_equipos

    CORCHETE_DER    reduce using rule 10 (lista_equipos -> equipo .)
    COMA            shift and go to state 25


state 22

    (12) lista_equipos -> empty .

    CORCHETE_DER    reduce using rule 12 (lista_equipos -> empty .)


state 23

    (13) equipo -> LLAVE_IZQ . campos_equipo LLAVE_DER
    (14) campos_equipo -> . campo_equipo
    (15) campos_equipo -> . campo_equipo COMA campos_equipo
    (16) campos_equipo -> . empty
    (17) campo_equipo -> . NOMBRE_EQUIPO DOS_PUNTOS STRING
    (18) campo_equipo -> . IDENTIDAD_EQUIPO DOS_PUNTOS STRING
    (19) campo_equipo -> . LINK DOS_PUNTOS STRING
    (20) campo_equipo -> . ASIGNATURA DOS_PUNTOS STRING
    (21) campo_equipo -> . CARRERA DOS_PUNTOS STRING
    (22) campo_equipo -> . UNIVERSIDAD_REGIONAL DOS_PUNTOS STRING
    (23) campo_equipo -> . VERSION DOS_PUNTOS STRING
    (24) campo_equipo -> . ALIANZA_EQUIPO DOS_PUNTOS STRING
    (25) campo_equipo -> . DIRECCION DOS_PUNTOS direccion
    (26) campo_equipo -> . INTEGRANTES DOS_PUNTOS CORCHETE_IZQ lista_integrantes CORCHETE_DER
    (27) campo_equipo -> . PROYECTOS DOS_PUNTOS CORCHETE_IZQ lista_proyectos CORCHETE_DER
    (28) campo_equipo -> . FIRMA_DIGITAL DOS_PUNTOS STRING
    (82) empty -> .

    NOMBRE_EQUIPO   shift and go to state 29
    IDENTIDAD_EQUIPO shift and go to state 30
    LINK            shift and go to state 31
    ASIGNATURA      shift and go to state 32
    CARRERA         shift and go to state 33
    UNIVERSIDAD_REGIONAL shift and go to state 34
    VERSION         shift and go to state 35
    ALIANZA_EQUIPO  shift and go to state 36
    DIRECCION       shift and go to state 37
    INTEGRANTES     shift and go to state 38
    PROYECTOS       shift and go to state 39
    FIRMA_DIGITAL   shift and go to state 40
    LLAVE_DER       reduce using rule 82 (empty -> .)

    campos_equipo                  shift and go to state 26
    campo_equipo                   shift and go to state 27
    empty                          shift and go to state 28

state 24

    (7) campo_principal -> EQUIPOS DOS_PUNTOS CORCHETE_IZQ lista_equipos CORCHETE_DER .

    COMA            reduce using rule 7 (campo_principal -> EQUIPOS DOS_PUNTOS CORCHETE_IZQ lista_equipos CORCHETE_DER .)
    LLAVE_DER       reduce using rule 7 (campo_principal -> EQUIPOS DOS_PUNTOS CORCHETE_IZQ lista_equipos CORCHETE_DER .)


state 25

    (11) lista_equipos -> equipo COMA . lista_equipos
    (10) lista_equipos -> . equipo
    (11) lista_equipos -> . equipo COMA lista_equipos
    (12) lista_equipos -> . empty
    (13) equipo -> . LLAVE_IZQ campos_equipo LLAVE_DER
    (82) empty -> .

    LLAVE_IZQ       shift and go to state 23
    CORCHETE_DER    reduce using rule 82 (empty -> .)

    equipo                         shift and go to state 21
    lista_equipos                  shift and go to state 41
    empty                          shift and go to state 22

state 26

    (13) equipo -> LLAVE_IZQ campos_equipo . LLAVE_DER

    LLAVE_DER       shift and go to state 42


state 27

    (14) campos_equipo -> campo_equipo .
    (15) campos_equipo -> campo_equipo . COMA campos_equipo

    LLAVE_DER       reduce using rule 14 (campos_equipo -> campo_equipo .)
    COMA            shift and go to state 43


state 28

    (16) campos_equipo -> empty .

    LLAVE_DER       reduce using rule 16 (campos_equipo -> empty .)


state 29

    (17) campo_equipo -> NOMBRE_EQUIPO . DOS_PUNTOS STRING

    DOS_PUNTOS      shift and go to state 44


state 30

    (18) campo_equipo -> IDENTIDAD_EQUIPO . DOS_PUNTOS STRING

    DOS_PUNTOS      shift and go to state 45


state 31

    (19) campo_equipo -> LINK . DOS_PUNTOS STRING

    DOS_PUNTOS      shift and go to state 46


state 32

    (20) campo_equipo -> ASIGNATURA . DOS_PUNTOS STRING

    DOS_PUNTOS      shift and go to state 47


state 33

    (21) campo_equipo -> CARRERA . DOS_PUNTOS STRING

    DOS_PUNTOS      shift and go to state 48


state 34

    (22) campo_equipo -> UNIVERSIDAD_REGIONAL . DOS_PUNTOS STRING

    DOS_PUNTOS      shift and go to state 49


state 35

    (23) campo_equipo -> VERSION . DOS_PUNTOS STRING

    DOS_PUNTOS      shift and go to state 50


state 36

    (24) campo_equipo -> ALIANZA_EQUIPO . DOS_PUNTOS STRING

    DOS_PUNTOS      shift and go to state 51


state 37

    (25) campo_equipo -> DIRECCION . DOS_PUNTOS direccion

    DOS_PUNTOS      shift and go to state 52


state 38

    (26) campo_equipo -> INTEGRANTES . DOS_PUNTOS CORCHETE_IZQ lista_integrantes CORCHETE_DER

    DOS_PUNTOS      shift and go to state 53


state 39

    (27) campo_equipo -> PROYECTOS . DOS_PUNTOS CORCHETE_IZQ lista_proyectos CORCHETE_DER

    DOS_PUNTOS      shift and go to state 54


state 40

    (28) campo_equipo -> FIRMA_DIGITAL . DOS_PUNTOS STRING

    DOS_PUNTOS      shift and go to state 55


state 41

    (11) lista_equipos -> equipo COMA lista_equipos .

    CORCHETE_DER    reduce using rule 11 (lista_equipos -> equipo COMA lista_equipos .)


state 42

    (13) equipo -> LLAVE_IZQ campos_equipo LLAVE_DER .

    COMA            reduce using rule 13 (equipo -> LLAVE_IZQ campos_equipo LLAVE_DER .)
    CORCHETE_DER    reduce using rule 13 (equipo -> LLAVE_IZQ campos_equipo LLAVE_DER .)


state 43

    (15) campos_equipo -> campo_equipo COMA . campos_equipo
    (14) campos_equipo -> . campo_equipo
    (15) campos_equipo -> . campo_equipo COMA campos_equipo
    (16) campos_equipo -> . empty
    (17) campo_equipo -> . NOMBRE_EQUIPO DOS_PUNTOS STRING
    (18) campo_equipo -> . IDENTIDAD_EQUIPO DOS_PUNTOS STRING
    (19) campo_equipo -> . LINK DOS_PUNTOS STRING
    (20) campo_equipo -> . ASIGNATURA DOS_PUNTOS STRING
    (21) campo_equipo -> . CARRERA DOS_PUNTOS STRING
    (22) campo_equipo -> . UNIVERSIDAD_REGIONAL DOS_PUNTOS STRING
    (23) campo_equipo -> . VERSION DOS_PUNTOS STRING
    (24) campo_equipo -> . ALIANZA_EQUIPO DOS_PUNTOS STRING
    (25) campo_equipo -> . DIRECCION DOS_PUNTOS direccion
    (26) campo_equipo -> . INTEGRANTES DOS_PUNTOS CORCHETE_IZQ lista_integrantes CORCHETE_DER
    (27) campo_equipo -> . PROYECTOS DOS_PUNTOS CORCHETE_IZQ lista_proyectos CORCHETE_DER
    (28) campo_equipo -> . FIRMA_DIGITAL DOS_PUNTOS STRING
    (82) empty -> .

    NOMBRE_EQUIPO   shift and go to state 29
    IDENTIDAD_EQUIPO shift and go to state 30
    LINK            shift and go to state 31
    ASIGNATURA      shift and go to state 32
    CARRERA         shift and go to state 33
    UNIVERSIDAD_REGIONAL shift and go to state 34
    VERSION         shift and go to state 35
    ALIANZA_EQUIPO  shift and go to state 36
    DIRECCION       shift and go to state 37
    INTEGRANTES     shift and go to state 38
    PROYECTOS       shift and go to state 39
    FIRMA_DIGITAL   shift and go to state 40
    LLAVE_DER       reduce using rule 82 (empty -> .)

    campo_equipo                   shift and go to state 27
    campos_equipo                  shift and go to state 56
    empty                          shift and go to state 28

state 44

    (17) campo_equipo -> NOMBRE_EQUIPO DOS_PUNTOS . STRING

    STRING          shift and go to state 57


state 45

    (18) campo_equipo -> IDENTIDAD_EQUIPO DOS_PUNTOS . STRING

    STRING          shift and go to state 58


state 46

    (19) campo_equipo -> LINK DOS_PUNTOS . STRING

    STRING          shift and go to state 59


state 47

    (20) campo_equipo -> ASIGNATURA DOS_PUNTOS . STRING

    STRING          shift and go to state 60


state 48

    (21) campo_equipo -> CARRERA DOS_PUNTOS . STRING

    STRING          shift and go to state 61


state 49

    (22) campo_equipo -> UNIVERSIDAD_REGIONAL DOS_PUNTOS . STRING

    STRING          shift and go to state 62


state 50

    (23) campo_equipo -> VERSION DOS_PUNTOS . STRING

    STRING          shift and go to state 63


state 51

    (24) campo_equipo -> ALIANZA_EQUIPO DOS_PUNTOS . STRING

    STRING          shift and go to state 64


state 52

    (25) campo_equipo -> DIRECCION DOS_PUNTOS . direccion
    (29) direccion -> . LLAVE_IZQ campos_direccion LLAVE_DER

    LLAVE_IZQ       shift and go to state 66

    direccion                      shift and go to state 65

state 53

    (26) campo_equipo -> INTEGRANTES DOS_PUNTOS . CORCHETE_IZQ lista_integrantes CORCHETE_DER

    CORCHETE_IZQ    shift and go to state 67


state 54

    (27) campo_equipo -> PROYECTOS DOS_PUNTOS . CORCHETE_IZQ lista_proyectos CORCHETE_DER

    CORCHETE_IZQ    shift and go to state 68


state 55

    (28) campo_equipo -> FIRMA_DIGITAL DOS_PUNTOS . STRING

    STRING          shift and go to state 69


state 56

    (15) campos_equipo -> campo_equipo COMA campos_equipo .

    LLAVE_DER       reduce using rule 15 (campos_equipo -> campo_equipo COMA campos_equipo .)


state 57

    (17) campo_equipo -> NOMBRE_EQUIPO DOS_PUNTOS STRING .

    COMA            reduce using rule 17 (campo_equipo -> NOMBRE_EQUIPO DOS_PUNTOS STRING .)
    LLAVE_DER       reduce using rule 17 (campo_equipo -> NOMBRE_EQUIPO DOS_PUNTOS STRING .)


state 58

    (18) campo_equipo -> IDENTIDAD_EQUIPO DOS_PUNTOS STRING .

    COMA            reduce using rule 18 (campo_equipo -> IDENTIDAD_EQUIPO DOS_PUNTOS STRING .)
    LLAVE_DER       reduce using rule 18 (campo_equipo -> IDENTIDAD_EQUIPO DOS_PUNTOS STRING .)


state 59

    (19) campo_equipo -> LINK DOS_PUNTOS STRING .

    COMA            reduce using rule 19 (campo_equipo -> LINK DOS_PUNTOS STRING .)
    LLAVE_DER       reduce using rule 19 (campo_equipo -> LINK DOS_PUNTOS STRING .)


state 60

    (20) campo_equipo -> ASIGNATURA DOS_PUNTOS STRING .

    COMA            reduce using rule 20 (campo_equipo -> ASIGNATURA DOS_PUNTOS STRING .)
    LLAVE_DER       reduce using rule 20 (campo_equipo -> ASIGNATURA DOS_PUNTOS STRING .)


state 61

    (21) campo_equipo -> CARRERA DOS_PUNTOS STRING .

    COMA            reduce using rule 21 (campo_equipo -> CARRERA DOS_PUNTOS STRING .)
    LLAVE_DER       reduce using rule 21 (campo_equipo -> CARRERA DOS_PUNTOS STRING .)


state 62

    (22) campo_equipo -> UNIVERSIDAD_REGIONAL DOS_PUNTOS STRING .

    COMA            reduce using rule 22 (campo_equipo -> UNIVERSIDAD_REGIONAL DOS_PUNTOS STRING .)
    LLAVE_DER       reduce using rule 22 (campo_equipo -> UNIVERSIDAD_REGIONAL DOS_PUNTOS STRING .)


state 63

    (23) campo_equipo -> VERSION DOS_PUNTOS STRING .

    COMA            reduce using rule 23 (campo_equipo -> VERSION DOS_PUNTOS STRING .)
    LLAVE_DER       reduce using rule 23 (campo_equipo -> VERSION DOS_PUNTOS STRING .)


state 64

    (24) campo_equipo -> ALIANZA_EQUIPO DOS_PUNTOS STRING .

    COMA            reduce using rule 24 (campo_equipo -> ALIANZA_EQUIPO DOS_PUNTOS STRING .)
    LLAVE_DER       reduce using rule 24 (campo_equipo -> ALIANZA_EQUIPO DOS_PUNTOS STRING .)


state 65

    (25) campo_equipo -> DIRECCION DOS_PUNTOS direccion .

    COMA            reduce using rule 25 (campo_equipo -> DIRECCION DOS_PUNTOS direccion .)
    LLAVE_DER       reduce using rule 25 (campo_equipo -> DIRECCION DOS_PUNTOS direccion .)


state 66

    (29) direccion -> LLAVE_IZQ . campos_direccion LLAVE_DER
    (30) campos_direccion -> . campo_direccion
    (31) campos_direccion -> . campo_direccion COMA campos_direccion
    (32) campos_direccion -> . empty
    (33) campo_direccion -> . CALLE DOS_PUNTOS STRING
    (34) campo_direccion -> . CIUDAD DOS_PUNTOS STRING
    (35) campo_direccion -> . PAIS DOS_PUNTOS STRING
    (82) empty -> .

    CALLE           shift and go to state 73
    CIUDAD          shift and go to state 74
    PAIS            shift and go to state 75
    LLAVE_DER       reduce using rule 82 (empty -> .)

    campos_direccion               shift and go to state 70
    campo_direccion                shift and go to state 71
    empty                          shift and go to state 72

state 67

    (26) campo_equipo -> INTEGRANTES DOS_PUNTOS CORCHETE_IZQ . lista_integrantes CORCHETE_DER
    (36) lista_integrantes -> . integrante
    (37) lista_integrantes -> . integrante COMA lista_integrantes
    (38) lista_integrantes -> . empty
    (39) integrante -> . LLAVE_IZQ campos_integrante LLAVE_DER
    (82) empty -> .

    LLAVE_IZQ       shift and go to state 79
    CORCHETE_DER    reduce using rule 82 (empty -> .)

    lista_integrantes              shift and go to state 76
    integrante                     shift and go to state 77
    empty                          shift and go to state 78

state 68

    (27) campo_equipo -> PROYECTOS DOS_PUNTOS CORCHETE_IZQ . lista_proyectos CORCHETE_DER
    (53) lista_proyectos -> . proyecto
    (54) lista_proyectos -> . proyecto COMA lista_proyectos
    (55) lista_proyectos -> . empty
    (56) proyecto -> . LLAVE_IZQ campos_proyecto LLAVE_DER
    (82) empty -> .

    LLAVE_IZQ       shift and go to state 83
    CORCHETE_DER    reduce using rule 82 (empty -> .)

    lista_proyectos                shift and go to state 80
    proyecto                       shift and go to state 81
    empty                          shift and go to state 82

state 69

    (28) campo_equipo -> FIRMA_DIGITAL DOS_PUNTOS STRING .

    COMA            reduce using rule 28 (campo_equipo -> FIRMA_DIGITAL DOS_PUNTOS STRING .)
    LLAVE_DER       reduce using rule 28 (campo_equipo -> FIRMA_DIGITAL DOS_PUNTOS STRING .)


state 70

    (29) direccion -> LLAVE_IZQ campos_direccion . LLAVE_DER

    LLAVE_DER       shift and go to state 84


state 71

    (30) campos_direccion -> campo_direccion .
    (31) campos_direccion -> campo_direccion . COMA campos_direccion

    LLAVE_DER       reduce using rule 30 (campos_direccion -> campo_direccion .)
    COMA            shift and go to state 85


state 72

    (32) campos_direccion -> empty .

    LLAVE_DER       reduce using rule 32 (campos_direccion -> empty .)


state 73

    (33) campo_direccion -> CALLE . DOS_PUNTOS STRING

    DOS_PUNTOS      shift and go to state 86


state 74

    (34) campo_direccion -> CIUDAD . DOS_PUNTOS STRING

    DOS_PUNTOS      shift and go to state 87


state 75

    (35) campo_direccion -> PAIS . DOS_PUNTOS STRING

    DOS_PUNTOS      shift and go to state 88


state 76

    (26) campo_equipo -> INTEGRANTES DOS_PUNTOS CORCHETE_IZQ lista_integrantes . CORCHETE_DER

    CORCHETE_DER    shift and go to state 89


state 77

    (36) lista_integrantes -> integrante .
    (37) lista_integrantes -> integrante . COMA lista_integrantes

    CORCHETE_DER    reduce using rule 36 (lista_integrantes -> integrante .)
    COMA            shift and go to state 90


state 78

    (38) lista_integrantes -> empty .

    CORCHETE_DER    reduce using rule 38 (lista_integrantes -> empty .)


state 79

    (39) integrante -> LLAVE_IZQ . campos_integrante LLAVE_DER
    (40) campos_integrante -> . campo_integrante
    (41) campos_integrante -> . campo_integrante COMA campos_integrante
    (42) campos_integrante -> . empty
    (43) campo_integrante -> . NOMBRE DOS_PUNTOS STRING
    (44) campo_integrante -> . EDAD DOS_PUNTOS NUM
    (45) campo_integrante -> . CARGO DOS_PUNTOS STRING
    (46) campo_integrante -> . FOTO DOS_PUNTOS STRING
    (47) campo_integrante -> . EMAIL DOS_PUNTOS STRING
    (48) campo_integrante -> . HABILIDADES DOS_PUNTOS STRING
    (49) campo_integrante -> . SALARIO DOS_PUNTOS salario
    (50) campo_integrante -> . ACTIVO DOS_PUNTOS BOOLEANO
    (82) empty -> .

    NOMBRE          shift and go to state 94
    EDAD            shift and go to state 95
    CARGO           shift and go to state 96
    FOTO            shift and go to state 97
    EMAIL           shift and go to state 98
    HABILIDADES     shift and go to state 99
    SALARIO         shift and go to state 100
    ACTIVO          shift and go to state 101
    LLAVE_DER       reduce using rule 82 (empty -> .)

    campos_integrante              shift and go to state 91
    campo_integrante               shift and go to state 92
    empty                          shift and go to state 93

state 80

    (27) campo_equipo -> PROYECTOS DOS_PUNTOS CORCHETE_IZQ lista_proyectos . CORCHETE_DER

    CORCHETE_DER    shift and go to state 102


state 81

    (53) lista_proyectos -> proyecto .
    (54) lista_proyectos -> proyecto . COMA lista_proyectos
